# com_proj

./: configuration-210.ini  configuration-211.ini  configuration-213.ini  configuration-214.ini  configuration-215.ini  configuration.ini  pyproject.toml  serial_test.spec
LedContrlCardDebug/: AssemblyInfo.cs  COMMU_HEAD.cs  Crc16.cs  DispSymbol.cs  DispText.cs  DotLine.cs  FormMain.cs  LedContrlCardDebug.csproj  LedContrlCardDebug.sln  ProtocolDevIo.cs  SetLight.cs  SyncCommu.cs  TcpDevIo.cs  UpgradeLog.htm  UserControl1.cs
LedContrlCardDebug/Backup/: ArcPar.cs  COMMU_ATT.cs  COMMU_TAIL.cs  FormMain.cs  LedContrlCardDebug.csproj  LedContrlCardDebug.sln  PlayControlx.cs  PolygonPar.cs  Pos2.cs  PowerSwitch.cs  Program.cs  RecPar.cs  RoundPar.cs  SyncTime.cs  TextWinAtt.cs  TimeWinAtt.cs  UdpDevIo.cs
LedContrlCardDebug/Properties/: Resources.Designer.cs  Settings.Designer.cs
com_proj/: .spec  configuration.ini  serial_test.py  serial_test.spec
com_proj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
com_proj/DbHelper/: mysqlHelper.py
ledcontrol/: ledcontrol.sln
ledcontrol/ledcontrol/: Program.cs  TcpDevIo.cs  ledcontrol.csproj
ledcontrol/ledcontrol/Properties/: AssemblyInfo.cs
tests/: test_com_proj.py
